--- a/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an8.65:2.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an8.65:2.3": "Das ist die zweite Dimension der Meisterschaft. ",
   "an8.65:3.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
-  "an8.65:3.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "an8.65:3.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an8.65:3.3": "Das ist die dritte Dimension der Meisterschaft. ",
   "an8.65:4.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
   "an8.65:4.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
