--- a/translation/de/sabbamitta/sutta/dn/dn7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn7_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "dn7:2.5": "Wenn ein Mönch so erkennt und sieht, wäre es da angebracht, von ihm zu sagen: ",
   "dn7:2.6": "‚Seele und Körper sind dasselbe‘ oder ‚Seele und Körper sind verschiedene Dinge‘?“ ",
   "dn7:2.7": "„Das wäre es, werter Freund.“ ",
-  "dn7:2.9": "„Aber, werte Freunde, ich weiß und sehe so. ",
+  "dn7:2.9": "„Aber, werte Freunde, ich erkenne und sehe so. ",
   "dn7:2.10": "Dennoch sage ich nicht: ",
   "dn7:2.11": "‚Seele und Körper sind dasselbe‘ oder ‚Seele und Körper sind verschiedene Dinge‘. … ",
   "dn7:3.1": "Da tritt ein Mönch in die zweite Vertiefung ein und verweilt darin … ",
