--- a/translation/de/sabbamitta/sutta/dn/dn7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn7_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "dn7:3.4": "Wenn ein Mönch so erkennt und sieht, wäre es da angebracht, von ihm zu sagen: ",
   "dn7:3.5": "‚Seele und Körper sind dasselbe‘ oder ‚Seele und Körper sind verschiedene Dinge‘?“ ",
   "dn7:3.6": "„Das wäre es, werter Freund.“ ",
-  "dn7:3.8": "„Aber, werte Freunde, ich weiß und sehe so. ",
+  "dn7:3.8": "„Aber, werte Freunde, ich erkenne und sehe so. ",
   "dn7:3.9": "Dennoch sage ich nicht: ",
   "dn7:3.10": "‚Seele und Körper sind dasselbe‘ oder ‚Seele und Körper sind verschiedene Dinge‘. … ",
   "dn7:4.1": "Er lenkt und richtet seinen Geist auf das Erkennen und Sehen … ",
