--- a/translation/de/sabbamitta/sutta/dn/dn7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn7_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "dn7:5.2": "Wenn ein Mönch so erkennt und sieht, wäre es da angebracht, von ihm zu sagen: ",
   "dn7:5.3": "‚Seele und Körper sind dasselbe‘ oder ‚Seele und Körper sind verschiedene Dinge‘?“ ",
   "dn7:5.4": "„Das wäre es nicht, werter Freund.“ ",
-  "dn7:5.6": "„Werte Freunde, ich weiß und sehe so. ",
+  "dn7:5.6": "„Werte Freunde, ich erkenne und sehe so. ",
   "dn7:5.7": "Und ich sage nicht: ",
   "dn7:5.8": "‚Seele und Körper sind dasselbe‘ oder ‚Seele und Körper sind verschiedene Dinge‘.“ ",
   "dn7:5.9": "Das sagte der Buddha. ",
