--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -119,7 +119,7 @@
   "dn6:16.8": "Wenn ein Mönch so erkennt und sieht, wäre es da angebracht, von ihm zu sagen: ",
   "dn6:16.9": "„Seele und Körper sind dasselbe“ oder „Seele und Körper sind verschiedene Dinge“?‘ ",
   "dn6:16.10": "‚Das wäre es, werter Freund.‘ ",
-  "dn6:16.12": "‚Aber, werte Freunde, ich weiß und sehe so. ",
+  "dn6:16.12": "‚Aber, werte Freunde, ich erkenne und sehe so. ",
   "dn6:16.13": "Dennoch sage ich nicht: ",
   "dn6:16.14": "„Seele und Körper sind dasselbe“ oder „Seele und Körper sind verschiedene Dinge“. … ",
   "dn6:17.1": "Da tritt ein Mönch in die zweite Vertiefung ein und verweilt darin … ",
