--- a/translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json
@@ -77,7 +77,7 @@
   "an1.442:1.4": " ",
   "an1.443:1.1": "Während ein Mönch keine Form innerlich wahrnimmt, sieht er äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "an1.443:1.2": "Wenn er das gemeistert hat, ist er sich klar: ",
-  "an1.443:1.3": "‚Ich weiß und sehe.‘ … ",
+  "an1.443:1.3": "‚Ich erkenne und sehe.‘ … ",
   "an1.443:1.4": " ",
   "an1.444:1.1": "Während eine Nonne keine Form innerlich wahrnimmt, sieht sie äußere Bilder, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
   "an1.444:1.2": "Wenn sie das gemeistert hat, ist sie sich klar: ",
