--- a/translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json
@@ -89,7 +89,7 @@
   "an1.445:1.4": " ",
   "an1.446:1.1": "Während eine Nonne keine Form innerlich wahrnimmt, sieht sie äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "an1.446:1.2": "Wenn sie das gemeistert hat, ist sie sich klar: ",
-  "an1.446:1.3": "‚Ich weiß und sehe.‘ … ",
+  "an1.446:1.3": "‚Ich erkenne und sehe.‘ … ",
   "an1.446:1.4": " ",
   "an1.447:1.0": "447–454 ",
   "an1.447:1.1": "Im Besitz körperlicher Form, sieht ein Mönch Bilder … ",
