--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -601,7 +601,7 @@
   "dn16:3.24.1": "Ānanda, es gibt acht Dimensionen der Meisterschaft. ",
   "dn16:3.24.2": "Welche acht? ",
   "dn16:3.25.1": "Während man Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
-  "dn16:3.25.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "dn16:3.25.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn16:3.25.3": "Das ist die erste Dimension der Meisterschaft. ",
   "dn16:3.26.1": "Während man Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
   "dn16:3.26.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
