--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -607,7 +607,7 @@
   "dn16:3.26.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn16:3.26.3": "Das ist die zweite Dimension der Meisterschaft. ",
   "dn16:3.27.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
-  "dn16:3.27.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "dn16:3.27.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn16:3.27.3": "Das ist die dritte Dimension der Meisterschaft. ",
   "dn16:3.28.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
   "dn16:3.28.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
