--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.68_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn12.68:1.2": "Da sagte der Ehrwürdige Saviṭṭha zum Ehrwürdigen Musīla: ",
   "sn12.68:1.3": "„Werter Musīla, weißt du, unabhängig von Vertrauen, Vorliebe, mündlicher Überlieferung, vernünftigem Nachdenken oder davon, einer Ansicht nach Abwägung zuzustimmen, für dich selbst, ",
   "sn12.68:1.4": "dass Wiedergeburt eine Bedingung für Alter und Tod ist?“ ",
-  "sn12.68:1.5": "„Werter Saviṭṭha, ich weiß und sehe, unabhängig von Vertrauen, Vorliebe, mündlicher Überlieferung, vernünftigem Nachdenken oder davon, einer Ansicht nach Abwägung zuzustimmen, für mich selbst, ",
+  "sn12.68:1.5": "„Werter Saviṭṭha, ich erkenne und sehe, unabhängig von Vertrauen, Vorliebe, mündlicher Überlieferung, vernünftigem Nachdenken oder davon, einer Ansicht nach Abwägung zuzustimmen, für mich selbst, ",
   "sn12.68:1.6": "dass Wiedergeburt eine Bedingung für Alter und Tod ist.“ ",
   "sn12.68:2.1": "„Werter Musīla, weißt du, unabhängig von Vertrauen, Vorliebe, mündlicher Überlieferung, vernünftigem Nachdenken oder davon, einer Ansicht nach Abwägung zuzustimmen, für dich selbst, ",
   "sn12.68:2.2": "dass fortgesetztes Dasein eine Bedingung für Wiedergeburt ist … ",
