--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.25_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "sn56.25:0.1": "Verbundene Lehrreden 56.25 ",
   "sn56.25:0.2": "3. Das Kapitel beim Dorf Koṭi ",
   "sn56.25:0.3": "Die Auflösung der Befleckungen ",
-  "sn56.25:1.1": "„Mönche und Nonnen, ich sage, dass die Befleckungen für jemanden aufgelöst werden, der weiß und sieht, nicht für jemanden, der nicht weiß und nicht sieht. ",
+  "sn56.25:1.1": "„Mönche und Nonnen, ich sage, dass die Befleckungen für jemanden aufgelöst werden, der erkennt und sieht, nicht für jemanden, der nicht erkennt und nicht sieht. ",
   "sn56.25:1.2": "Für jemanden, der was weiß und sieht? ",
   "sn56.25:1.3": "‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘ ",
   "sn56.25:1.4": "Die Befleckungen werden für jemanden aufgelöst, der das weiß und sieht. ",
