--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn56.39:0.3": "Ein Grenzpfosten ",
   "sn56.39:1.1": "„Mönche und Nonnen, es gibt Asketen und Brahmanen, die nicht wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
   "sn56.39:1.2": "Sie blicken zum Gesicht eines anderen Asketen oder Brahmanen auf: ",
-  "sn56.39:1.3": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
+  "sn56.39:1.3": "‚Sicher erkennt und sieht dieser werte Herr.‘ ",
   "sn56.39:2.1": "Wie eine leichte Baumwoll- oder Kapokflocke, die vom Wind hochgehoben würde und auf ebener Erde aufkäme: ",
   "sn56.39:2.2": "Der Ostwind würde sie nach Westen treiben, der Westwind würde sie nach Osten treiben, der Nordwind würde sie nach Süden treiben und der Südwind würde sie nach Norden treiben. ",
   "sn56.39:2.3": "Und warum? ",
