--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "sn56.39:2.9": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. ",
   "sn56.39:3.1": "Es gibt Asketen und Brahmanen, die wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
   "sn56.39:3.2": "Sie blicken nicht zum Gesicht eines anderen Asketen oder Brahmanen auf: ",
-  "sn56.39:3.3": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
+  "sn56.39:3.3": "‚Sicher erkennt und sieht dieser werte Herr.‘ ",
   "sn56.39:4.1": "Wie ein eiserner Pfosten oder ein Grenzpfosten: Er ist tief eingebettet und fest verankert, unerschütterlich und unverrückbar. ",
   "sn56.39:4.2": "Selbst wenn gewaltige Stürme aus Osten, Westen, Norden oder Süden losbrechen würden, könnten sie ihn nicht zum Zittern, Schwanken oder Beben bringen. ",
   "sn56.39:4.3": "Und warum nicht? ",
