--- a/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an11.16:4.5": "Sie versteht: ‚Aber was durch Entscheidungen und Absichten zustande kommt, ist unbeständig und muss aufhören.‘ ",
   "an11.16:4.6": "Indem sie darin verweilt, erreicht sie die Auflösung der Befleckungen. ",
   "an11.16:4.7": "Wenn sie nicht die Auflösung der Befleckungen erreicht, wird sie mit dem Auflösen der fünf niederen Fesseln aufgrund ihrer Leidenschaft und Liebe zu dieser Meditation durch unmittelbares Erscheinen wiedergeboren. Sie erlischt dort und muss von jener Welt nicht zurückkehren. ",
-  "an11.16:4.8": "Das ist ein Ding, das vom Gesegneten, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde, sodass der Geist eines beflissenen, eifrigen und entschlossenen Mönchs, wenn er es übt, befreit wird und er die unübertreffliche Geborgenheit erreicht. ",
+  "an11.16:4.8": "Das ist ein Ding, das vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde, sodass der Geist eines beflissenen, eifrigen und entschlossenen Mönchs, wenn er es übt, befreit wird und er die unübertreffliche Geborgenheit erreicht. ",
   "an11.16:5.1": "Wenn dann das Ausrichten und Halten des Geistes sich beruhigt, tritt ein Mönch oder eine Nonne in die zweite Vertiefung ein und verweilt darin … ",
   "an11.16:5.2": "in die dritte Vertiefung … ",
   "an11.16:5.3": "in die vierte Vertiefung. ",
