--- a/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
@@ -59,7 +59,7 @@
   "an11.16:9.5": "Sie versteht: ‚Aber was durch Entscheidungen und Absichten zustande kommt, ist unbeständig und muss aufhören.‘ ",
   "an11.16:9.6": "Indem sie darin verweilt, erreicht sie die Auflösung der Befleckungen. ",
   "an11.16:9.7": "Wenn sie nicht die Auflösung der Befleckungen erreicht, wird sie mit dem Auflösen der fünf niederen Fesseln aufgrund ihrer Leidenschaft und Liebe zu dieser Meditation durch unmittelbares Erscheinen wiedergeboren. Sie erlischt dort und muss von jener Welt nicht zurückkehren. ",
-  "an11.16:9.8": "Auch das ist ein Ding, das vom Gesegneten, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde, sodass der Geist eines beflissenen, eifrigen und entschlossenen Mönchs, wenn er es übt, befreit wird und er die unübertreffliche Geborgenheit erreicht.“ ",
+  "an11.16:9.8": "Auch das ist ein Ding, das vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde, sodass der Geist eines beflissenen, eifrigen und entschlossenen Mönchs, wenn er es übt, befreit wird und er die unübertreffliche Geborgenheit erreicht.“ ",
   "an11.16:10.1": "Daraufhin sagte der Hausbesitzer Dasama zum Ehrwürdigen Ānanda: ",
   "an11.16:10.2": "„Herr, wie wenn jemand einen Zugang zu einem verborgenen Schatz suchen würde, und auf einmal würde er elf Zugänge finden! ",
   "an11.16:10.3": "Ebenso habe ich ein Tor zur Unsterblichkeit gesucht, und auf einmal höre ich von elf Toren zur Unsterblichkeit! ",
