--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -51,7 +51,7 @@
   "dn23:6.7": "„Und wie genau, Stammesfürst?“ ",
   "dn23:6.8": "„Nun, ich habe Freunde und Kollegen, Verwandte und Sippenangehörige, die lebende Geschöpfe töten, stehlen und sexuelle Verfehlungen begehen. Sie gebrauchen falsche, entzweiende, harte oder unsinnige Rede. Und sie sind begehrlich und böswillig und haben falsche Ansicht. ",
   "dn23:6.9": "Nach einiger Zeit sind sie mitgenommen, leidend, schwer krank. ",
-  "dn23:6.10": "Wenn ich weiß, ",
+  "dn23:6.10": "Wenn ich erkenne, ",
   "dn23:6.11": "dass sie sich von ihrer Krankheit nicht erholen werden, gehe ich zu ihnen und sage: ",
   "dn23:6.12": "‚Ihr Herren, es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
   "dn23:6.13": "„Die, die lebende Geschöpfe töten, stehlen und sexuelle Verfehlungen begehen; die falsche, entzweiende, harte oder unsinnige Rede gebrauchen; die begehrlich und böswillig sind und falsche Ansicht haben – wenn ihr Körper auseinanderbricht, nach dem Tod, werden sie an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle.“ ",
