--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -88,7 +88,7 @@
   "dn23:8.7": "„Und wie genau, Stammesfürst?“ ",
   "dn23:8.8": "„Nun, ich habe Freunde und Kollegen, Verwandte und Sippenangehörige, die das Töten lebender Geschöpfe, das Stehlen und das Begehen sexueller Verfehlungen unterlassen. Sie unterlassen den Gebrauch falscher, entzweiender, harter oder unsinnige Rede. Und sie sind zufrieden und gütig und haben rechte Ansicht. ",
   "dn23:8.9": "Nach einiger Zeit sind sie mitgenommen, leidend, schwer krank. ",
-  "dn23:8.10": "Wenn ich weiß, ",
+  "dn23:8.10": "Wenn ich erkenne, ",
   "dn23:8.11": "dass sie sich von ihrer Krankheit nicht erholen werden, gehe ich zu ihnen und sage: ",
   "dn23:8.12": "‚Ihr Herren, es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
   "dn23:8.13": "„Die, die das Töten lebender Geschöpfe, das Stehlen und das Begehen sexueller Verfehlungen unterlassen; die den Gebrauch falscher, entzweiender, harter oder unsinnige Rede unterlassen; die zufrieden und gütig sind und rechte Ansicht haben – wenn ihr Körper auseinanderbricht, nach dem Tod, werden sie an einem guten Ort wiedergeboren, in einer himmlischen Welt.“ ",
