--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "sn3.17:1.1": "In Sāvatthī. ",
   "sn3.17:1.3": "Als er sich zur Seite hingesetzt hatte, sagte König Pasenadi zum Buddha: ",
   "sn3.17:1.4": "„Herr, gibt es ein Ding, ",
-  "sn3.17:1.5": "das Nutzen sowohl in diesem als auch in künftigen Leben sichert?“ ",
+  "sn3.17:1.5": "das Vorteile sowohl in diesem als auch in künftigen Leben sichert?“ ",
   "sn3.17:2.1": "„Das gibt es, großer König.“ ",
   "sn3.17:3.1": "„Und was ist dieses eine Ding?“ ",
   "sn3.17:4.1": "„Beflissenheit, großer König, ist ein Ding, ",
