--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "sn3.17:6.1": "dieser Kluge lobt Beflissenheit ",
   "sn3.17:6.2": "im Schaffen von Verdienst. ",
   "sn3.17:6.3": "Beflissen sichert sich ein kluger Mensch ",
-  "sn3.17:6.4": "den Nutzen auf beiden Seiten: ",
+  "sn3.17:6.4": "den Vorteil auf beiden Seiten: ",
   "sn3.17:7.1": "den Nutzen in diesem ",
   "sn3.17:7.2": "und in künftigen Leben. ",
   "sn3.17:7.3": "Ein weiser Mensch, der die Bedeutung erfasst, ",
