--- a/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
@@ -193,7 +193,7 @@
   "thag21.1:47.2": "von den Aggregaten, den Sinnesfeldern ",
   "thag21.1:47.3": "und den Elementen, da verstand ich; ",
   "thag21.1:47.4": "und ich zog fort ins hauslose Leben. ",
-  "thag21.1:48.1": "Es ist wahrlich zum Nutzen Vieler, ",
+  "thag21.1:48.1": "Es ist wahrlich zum Vorteil Vieler, ",
   "thag21.1:48.2": "dass die Klargewordenen erscheinen – ",
   "thag21.1:48.3": "zum Nutzen der Frauen und Männer, ",
   "thag21.1:48.4": "die ihren Anweisungen folgen. ",
