--- a/translation/de/sabbamitta/sutta/sn/sn8/sn8.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn8/sn8.12_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "sn8.12:3.4": "zog ich fort ins hauslose Leben. ",
   "sn8.12:4.1": "Es war wahrlich zum Vorteil Vieler, ",
   "sn8.12:4.2": "dass der Abgeklärte das Erwachen erreichte – ",
-  "sn8.12:4.3": "zum Nutzen der Mönche und Nonnen, ",
+  "sn8.12:4.3": "zum Vorteil der Mönche und Nonnen, ",
   "sn8.12:4.4": "die sehen, dass sie Sicherheit erlangt haben. ",
   "sn8.12:5.1": "Es war mir so willkommen, ",
   "sn8.12:5.2": "in der Gegenwart des Buddha zu sein. ",
