--- a/translation/de/sabbamitta/sutta/an/an4/an4.186_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.186_translation-de-sabbamitta.json
@@ -45,6 +45,6 @@
   "an4.186:8.4": " ",
   "an4.186:8.5": " ",
   "an4.186:8.6": " ",
-  "an4.186:8.7": "Ein kluger Mensch mit großer Weisheit ist jemand, der nicht daran denkt, sich selbst zu verletzen, jemand anderen zu verletzen oder beide zu verletzen. Wenn er denkt, denkt er nur an den Nutzen für sich selbst, für andere, für beide und für die ganze Welt. ",
+  "an4.186:8.7": "Ein kluger Mensch mit großer Weisheit ist jemand, der nicht daran denkt, sich selbst zu verletzen, jemand anderen zu verletzen oder beide zu verletzen. Wenn er denkt, denkt er nur an den eigenen Nutzen, den Nutzen anderer, den Nutzen beider und den Nutzen der ganzen Welt. ",
   "an4.186:8.8": "So ist man ein kluger Mensch mit großer Weisheit.“ "
 }
