--- a/translation/de/sabbamitta/sutta/an/an5/an5.48_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.48_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "an5.48:8.4": "wenn sie sehen, dass sein Ausdruck sich nicht verändert. ",
   "an5.48:9.1": "Singen, Aufsagen, erlesene Sprüche, ",
   "an5.48:9.2": "Wohltätigkeit oder Bräuche: ",
-  "an5.48:9.3": "Wenn etwas davon von Nutzen ist, ",
+  "an5.48:9.3": "Wenn etwas davon von Vorteil ist, ",
   "an5.48:9.4": "mach auf jeden Fall damit weiter. ",
   "an5.48:10.1": "Doch wenn du verstehst: ‚Dieses gute Ding ",
   "an5.48:10.2": "kann weder ich noch irgendjemand sonst bekommen‘, ",
