--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an1.82:0.3": "82–97 ",
   "an1.82:1.0": "82 ",
   "an1.82:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus nachteilig ist wie Nachlässigkeit. ",
-  "an1.82:1.2": "Nachlässigkeit ist überaus schädlich.“ ",
+  "an1.82:1.2": "Nachlässigkeit ist überaus nachteilig.“ ",
   "an1.82:1.3": " ",
   "an1.83:1.0": "83 ",
   "an1.83:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie Beflissenheit. ",
