--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "an1.90:1.3": " ",
   "an1.91:1.0": "91 ",
   "an1.91:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie korrekte Aufmerksamkeit. ",
-  "an1.91:1.2": "Korrekte Aufmerksamkeit ist überaus segensreich.“ ",
+  "an1.91:1.2": "Korrekte Aufmerksamkeit ist überaus vorteilhaft.“ ",
   "an1.91:1.3": " ",
   "an1.92:1.0": "92 ",
   "an1.92:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie mangelnde Umsicht. ",
