--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "an1.87:1.3": " ",
   "an1.88:1.0": "88 ",
   "an1.88:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus nachteilig ist wie Unzufriedenheit. ",
-  "an1.88:1.2": "Unzufriedenheit ist überaus schädlich.“ ",
+  "an1.88:1.2": "Unzufriedenheit ist überaus nachteilig.“ ",
   "an1.88:1.3": " ",
   "an1.89:1.0": "89 ",
   "an1.89:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie Zufriedenheit. ",
