--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an1.93:1.3": " ",
   "an1.94:1.0": "94 ",
   "an1.94:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus nachteilig ist wie schlechte Freunde. ",
-  "an1.94:1.2": "Schlechte Freunde sind überaus schädlich.“ ",
+  "an1.94:1.2": "Schlechte Freunde sind überaus nachteilig.“ ",
   "an1.94:1.3": " ",
   "an1.95:1.0": "95 ",
   "an1.95:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie gute Freunde. ",
