--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -60,7 +60,7 @@
   "an1.95:1.3": " ",
   "an1.96:1.0": "96 ",
   "an1.96:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus nachteilig ist wie schlechten Gewohnheiten zu folgen anstatt guten Gewohnheiten. ",
-  "an1.96:1.2": "Schlechten Gewohnheiten zu folgen anstatt guten Gewohnheiten ist überaus schädlich.“ ",
+  "an1.96:1.2": "Schlechten Gewohnheiten zu folgen anstatt guten Gewohnheiten ist überaus nachteilig.“ ",
   "an1.96:1.3": " ",
   "an1.97:1.0": "97 ",
   "an1.97:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie guten Gewohnheiten zu folgen anstatt schlechten Gewohnheiten. ",
