--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "an1.89:1.2": "Zufriedenheit ist überaus vorteilhaft.“ ",
   "an1.89:1.3": " ",
   "an1.90:1.0": "90 ",
-  "an1.90:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus nachteilig ist wie unkorrekte Aufmerksamkeit. ",
+  "an1.90:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie unkorrekte Aufmerksamkeit. ",
   "an1.90:1.2": "Unkorrekte Aufmerksamkeit ist überaus nachteilig.“ ",
   "an1.90:1.3": " ",
   "an1.91:1.0": "91 ",
