--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "an1.91:1.3": " ",
   "an1.92:1.0": "92 ",
   "an1.92:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie mangelnde Umsicht. ",
-  "an1.92:1.2": "Mangelnde Umsicht ist überaus nachteilig.“ ",
+  "an1.92:1.2": "Mangelnde Umsicht ist überaus schädlich.“ ",
   "an1.92:1.3": " ",
   "an1.93:1.0": "93 ",
   "an1.93:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie Umsicht. ",
