--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an1.82:1.3": " ",
   "an1.83:1.0": "83 ",
   "an1.83:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus segensreich ist wie Beflissenheit. ",
-  "an1.83:1.2": "Beflissenheit ist überaus vorteilhaft.“ ",
+  "an1.83:1.2": "Beflissenheit ist überaus segensreich.“ ",
   "an1.83:1.3": " ",
   "an1.84:1.0": "84 ",
   "an1.84:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie Trägheit. ",
