--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an1.84:1.2": "Trägheit ist überaus schädlich.“ ",
   "an1.84:1.3": " ",
   "an1.85:1.0": "85 ",
-  "an1.85:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie das Aufrütteln der Energie. ",
+  "an1.85:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus segensreich ist wie das Aufrütteln der Energie. ",
   "an1.85:1.2": "Das Aufrütteln der Energie ist überaus vorteilhaft.“ ",
   "an1.85:1.3": " ",
   "an1.86:1.0": "86 ",
