--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an1.86:1.3": " ",
   "an1.87:1.0": "87 ",
   "an1.87:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus segensreich ist wie Genügsamkeit. ",
-  "an1.87:1.2": "Genügsamkeit ist überaus vorteilhaft.“ ",
+  "an1.87:1.2": "Genügsamkeit ist überaus segensreich.“ ",
   "an1.87:1.3": " ",
   "an1.88:1.0": "88 ",
   "an1.88:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie Unzufriedenheit. ",
