--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -48,7 +48,7 @@
   "an1.92:1.3": " ",
   "an1.93:1.0": "93 ",
   "an1.93:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus segensreich ist wie Umsicht. ",
-  "an1.93:1.2": "Umsicht ist überaus vorteilhaft.“ ",
+  "an1.93:1.2": "Umsicht ist überaus segensreich.“ ",
   "an1.93:1.3": " ",
   "an1.94:1.0": "94 ",
   "an1.94:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie schlechte Freunde. ",
